fix alignment of title [TASK-1105]

--- a/src/client/modules/plugins/mainwindow/modules/logoWidget.css
+++ b/src/client/modules/plugins/mainwindow/modules/logoWidget.css
@@ -22,3 +22,7 @@
     flex: 1;
     margin-left: 5px;
 }
+
+.plugin-mainwindow .widget-logo .-label .-icon {
+    font-size: 80%;
+}
