--- a/src/client/modules/plugins/mainwindow/modules/mainWindow.css
+++ b/src/client/modules/plugins/mainwindow/modules/mainWindow.css
@@ -77,6 +77,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
+    padding: 2px 4px 0 4px;
 }
 
 .plugin-mainwindow.widget-mainwindow .-navbar .-cell.-logo {
@@ -88,12 +89,15 @@
 
 .plugin-mainwindow.widget-mainwindow .-navbar .-cell.-title {
     flex: 1 1 0px;
+    align-items: center;
+    justify-content: left;
+    display: flex;
 }
 
 .plugin-mainwindow.widget-mainwindow .-navbar .-cell.-menu {}
 
 .plugin-mainwindow.widget-mainwindow .-navbar .-cell.-title {
-    padding: 10px 0 4px 10px;
+    padding-left: 10px;
 }
 
 .plugin-mainwindow.widget-mainwindow .-navbar .-cell.-notification {
@@ -173,12 +177,12 @@
 
 .plugin-mainwindow.widget-mainwindow .-navbar .btn.kb-nav-btn {
     background-color: #FFF;
-    padding: 1px 7px;
+    /* padding: 1px 7px; */
     font-size: 24px;
     border: none;
     text-shadow: none !important;
     margin: 0;
-    margin-right: 5px;
+    /* margin-right: 5px; */
 }
 
 .plugin-mainwindow.widget-mainwindow .-navbar .btn.kb-nav-btn>div {
