--- a/src/client/modules/plugins/mainwindow/modules/menuWidget.css
+++ b/src/client/modules/plugins/mainwindow/modules/menuWidget.css
@@ -1,6 +1,6 @@
 .plugin-mainwindow .widget-menu {
     /* margin-top: 12px; */
-    margin-left: 4px;
+    /* margin-left: 4px; */
     flex: 1;
 }
 
